schema/testdata/errors/attribute_embed.keel
model Author {
    fields {
        firstName Text
        surname Text @unique
        books Book[]
    }
}

model Review {
    fields {
        content Text
        book Book
    }

    actions {
        get getReview(id) {
            @embed(book)
        }
    }
}

model Book {
    fields {
        //expect-error:20:26:E011:field 'title' has an unrecognised attribute @embed
        title Text @embed()
        author Author
        reviews Review[]
        code Code?
    }

    //expect-error:5:11:E011:model 'Book' has an unrecognised attribute @embed
    @embed(code)

    actions {
        list listBooks() {
            @embed(code)
            //expect-error:20:21:AttributeArgumentError:The @embed attribute can only be used with valid model fields
            @embed(1)
            //expect-error:20:28:AttributeArgumentError:@embed argument is not correctly formatted
            @embed(code = 1)
            //expect-error:29:30:AttributeArgumentError:The @embed attribute can only be used with valid model fields
            //expect-error:29:30:AttributeArgumentError:unexpected argument for @embed as only a single argument is expected
            @embed(reviews, 2)
            //expect-error:20:26:AttributeArgumentError:The @embed attribute can only be used with valid model fields
            @embed("code")
        }
        get getBook(id) {
            //expect-error:20:25:AttributeArgumentError:title is not a model field
            @embed(title)
            //expect-error:13:21:AttributeArgumentError:@embed requires at least one argument
            @embed()
            //expect-error:20:32:AttributeArgumentError:title is not a field in the Author model
            @embed(author.title)
            //expect-error:20:36:AttributeArgumentError:firstName is not a model field
            @embed(author.firstName)
            @embed(author)
            //expect-error:20:26:AttributeArgumentError:@embed argument 'author' already defined within this action
            @embed(author)
        }
        get getLiteBook(id)
    }
}

model Code {
    fields {
        code Text
        book Book @unique
    }
}
